--- a/documentation/assets/css/webfonts.css
+++ b/documentation/assets/css/webfonts.css
@@ -1,6 +1,8 @@
 /*
 This file is from the Doulos SIL project (https://software.sil.org/doulos/).
-Copyright (c) 1997-2021 SIL International (http://www.sil.org/) with Reserved Font Names "Doulos" and "SIL". This Font Software is licensed under the SIL Open Font License, Version 1.1 (http://scripts.sil.org/OFL).
+Copyright (c) 1994-2021 SIL International (http://www.sil.org/) with Reserved
+Font Names "Doulos" and "SIL". This Font Software is licensed under the SIL
+Open Font License, Version 1.1 (http://scripts.sil.org/OFL).
 */
 @font-face {
     font-family: DoulosSIL-R;
