--- a/web/DoulosSIL-webfont-example.css
+++ b/web/DoulosSIL-webfont-example.css
@@ -1,19 +1,14 @@
 /*
-DoulosSIL-webfont-example.css
-Doulos SIL v 5.000
-14 Oct 2014
-This file is part of Doulos SIL font family (http://scripts.sil.org/DoulosSILfont)
-and is Copyright (c) 1997-2014 SIL International (http://www.sil.org/),
-with Reserved Font Names "Doulos" and "SIL". This Font Software is licensed
-under the SIL Open Font License, Version 1.1. You should have received a copy
-of the license along with this Font Software. If this is not the case, go to
-(http://scripts.sil.org/OFL) for all the details including a FAQ.
+This file is from the Doulos SIL project (https://software.sil.org/doulos/).
+Copyright (c) 1994-2021 SIL International (http://www.sil.org/) with Reserved
+Font Names "Doulos" and "SIL". This Font Software is licensed under the SIL
+Open Font License, Version 1.1 (http://scripts.sil.org/OFL).
 */
 
 /* use Doulos SIL - Regular in .woff format */
 @font-face {
   font-family: DoulosSILW;
-  src: url(DoulosSIL-R.woff);
+  src: url(DoulosSIL-Regular.woff2);
 }
 
 /* set body to use Doulos SIL in .ttf format */
