--- a/web/DoulosSIL-webfont-example.css
+++ b/web/DoulosSIL-webfont-example.css
@@ -1,6 +1,6 @@
 /*
 This file is from the Doulos SIL project (https://software.sil.org/doulos/).
-Copyright (c) 1994-2024 SIL International (https://www.sil.org/) with Reserved
+Copyright (c) 1994-2024 SIL Global (https://www.sil.org/) with Reserved
 Font Names "Doulos" and "SIL". This Font Software is licensed under the SIL
 Open Font License, Version 1.1 (https://openfontlicense.org).
 */
